--- a/home2Version.css
+++ b/home2Version.css
@@ -1,107 +1,21 @@
  body {
-  width: 100%;
-  margin:auto;
-  background-color: #d8d8d8;
+    width: 100%;
+     height: 100%;
+    margin:auto;
+    background-color: #d8d8d8;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right:0;
 }
-/* ***************Sliding Images on Upper Section Home Page****************** */
-
-/* slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* next and previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* on hover, add a black background color with a little bit of see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position:absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* number text(1/3 etc) */
-.numbertext P{
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* the dots/ bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
 
 .subnav{
-  width: 100%;
-  background-color: #555;
-  overflow: auto;
+    width: 100%;
+    margin: 0;
+    
+    background-color: #013644;
+    overflow:auto;
+    z-index: 1;
 }
 
 .subnav a{
@@ -109,13 +23,38 @@
     font-size: 17px;
     color:white;
     text-align: center;
-    padding: 14px 16px;
+    margin: 0 auto;
+    padding: 5px 10px;
+    width:6%;
     text-decoration: none;
+}
+
+.subnav .menu{
+    width:10%;
+
+}
+.subnav .menubtn {
+    float: left;
+    font-size: 17px;
+    color:white;
+    
+    text-align: center;
+    text-decoration: none;
+}
+
+.subnav i{
+    float: left;
+    width: 7%;
+}
+
+.subnav a:hover{
+    background-color: #255060;
 }
 
 .dropdown{
     float: left;
-    overflow: hidden;
+    overflow: auto;
+    
 }
 
 .dropdown .dropbtn{
@@ -123,36 +62,46 @@
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
+    width: 100%;
+    padding: 5px 10px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+.dropdown .dropbtn i{
+    float:right;
+    padding:2px;6px
+}
+.dropdown:hover .dropbtn {
+  background-color: #255060;
 }
 
+
+
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    
+    min-width: 160px;
+    max-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+    float: none;
+    color: black;
+    padding: 16px 0px;
+    width: 100%;
+    text-decoration: none;
+    display: block;
+    text-align: centerww;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #255060;
 }
 
 .dropdown:hover .dropdown-content {
@@ -171,14 +120,20 @@
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
+    width: 100%;
+    padding: 5px 10px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
 }
 
-.navbar a:hover, .dropdown2:hover .dropbtn2 {
-  background-color: red;
+.dropdown2 .dropbtn2 i{
+    float:right;
+    padding:2px;6px
+}
+
+.dropdown2:hover .dropbtn2 {
+  background-color: #255060;
 }
 
 
@@ -187,50 +142,95 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
+    max-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content2 a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+    float: none;
+    color: black;
+    padding: 16px 0px;
+    width: 100%;
+    text-decoration: none;
+    display: block;
+    text-align: center;
 }
 
 .dropdown-content2 a:hover {
-  background-color: #ddd;
+  background-color: #255060;
 }
 
 .dropdown2:hover .dropdown-content2 {
+    
   display: block;
 }
 
-form.searchbar input[type = text]{
+.subnav .searchbar{
+    padding-top: 4px;
+}
+
+.subnav input[type = text]{
     float: right;
     border: none;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 .subnav .regis{float: right;
-    width: 25px;
+    width: 5%;
+    margin: 0;
+    
 
 }
 
-form.searchbar button{
+.subnav .searchbar button{
     float: right;
+    border: none;
+    padding-bottom: 4px;
+    cursor: pointer;
+}
+
+
+.subnav button{
     background: #2196f3;
     color: white;
     font-size: 17px;
-    
     border: 1px solid grey;
     border-left: none;
+
 }
 
+.subnav .cart {
+    float: right;
+    width:2%;
+    padding-top: 3px;
+    padding-right: 10px;
+
+}
+
+.subnav .cart a {
+    padding: 5px px;
+    width: 50%;
+}
+
+.subnav .menu button{
+    float:left;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+.middle-section{
+    position: sticky;
+    border: 5px solid black;
+    width: 35%;
+}
+
+
+    
+
 @media screen and (max-width:600px){
-    .subnav a, subnav input[type=search]{
+    .subnav a, subnav input[type=text]{
+        overflow: auto;
         float: none;
         display: block;
         text-align: left;
@@ -238,7 +238,7 @@ form.searchbar button{
         margin:0;
         padding: 14px;
     }
-    .subnav input[type=search]{
+    .subnav input[type=text]{
         border:1px solid #ccc;
     }
 }
