--- a/home-style.css
+++ b/home-style.css
@@ -7,6 +7,7 @@ body {
    bottom: 0;
    left: 0;
    right:0;
+    overflow: auto;
 }
 
 .subnav{
@@ -74,7 +75,7 @@ body {
    padding:2px;6px
 }
 .dropdown:hover .dropbtn {
- background-color: #255060;
+ background-color: #ac3b61;
 }
 
 .dropdown-content {
@@ -129,7 +130,7 @@ body {
 }
 
 .dropdown2:hover .dropbtn2 {
- background-color: #255060;
+ background-color: #ac3b61;
 }
 
 .dropdown-content2 {
@@ -244,6 +245,7 @@ body {
    width: 100%;
    height: 100%;
    background-color: #fafcff;
+    
 }
 
 
@@ -261,7 +263,8 @@ body {
   font-weight:600;
   border: solid #ff731c;
   border-style: groove;
-  width: 493px;
+      
+  width: 500px;
 }
 
 
@@ -271,9 +274,6 @@ body {
   margin-top: 5px;
 }
 
-.songs ol li i {
-  color: #ff731c;
-}
 
 .enlarge {
 padding-left: 7px;
@@ -306,3 +306,28 @@ audio {
   margin-top: 20px;
   margin-right: 5px;
 }
+
+.middle-section .fa-twitter,.middle-section .fa-facebook-official,.middle-section .fa-instagram{
+    width: 20px;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    text-decoration:none;
+    border-radius: 50%;
+}
+
+.middle-section .fa-facebook-official:hover{
+    background:#3b5998;
+    color: white;
+}
+
+.middle-section .fa-twitter:hover{
+    background: #38a1f3;
+    color: white;
+}
+
+.middle-section .fa-instagram:hover{
+    color:#fff;
+    background: #d6249f;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%, #285aeb 90%);
+    box-shadow: 0px 3px 10px rgba(0,0,0,.25);
