--- a/home-slideshow.css
+++ b/home-slideshow.css
@@ -1,34 +1,117 @@
-/* slideshow */
-#slide-contain {
-	width: 100%;
-	height: 500px;
-	background-color: rgba(0,0,155,0.3);
-	background-image: url("../media/images/photo/guitar2.jpg" );
-	background-position: center;
-	background-size: cover;
-	position: relative;
+
+ol,ul {
+	list-style:none;
+}
+/* General Demo Style */
+
+
+.slideshow,
+.slideshow:after {
+    background-size: cover;
+    background-position: center;
+    position:absolute;
+    width: 97%;
+    height: 510px;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+    overflow: hidden;
+}
+.slideshow:after {
+    content: '';
+}
+.slideshow li span {
+    width: 100%;
+    height: 510px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    z-index: 0;
+	-webkit-backface-visibility: hidden;
+    -webkit-animation: imageAnimation 36s linear infinite 0s;
+
+}
+.slideshow li div {
+    z-index: 1000;
+    position: absolute;
+    bottom: 30px;
+    left: 0px;
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    -webkit-animation: titleAnimation 36s linear infinite 0s;
+   
 }
 
-/* Logo on top - this does not move... Images slide behind the logo */
-
-#logo-top {
-	margin: 0 auto;
-	z-index: 999;
 }
+.slideshow li:nth-child(1) span { background-image: url(../Thessiah/workspace/media/images/photo/ableton.jpg) }
+.slideshow li:nth-child(2) span {
+    background-image: url(../Thessiah/workspace/media/images/photo/desk.jpg);
+    -webkit-animation-delay: 6s;
 
-#logo-top img {
-	display: block;
-	width: 328.4px;
-	height: 377.5px;
-	margin-left: auto;
-	margin-right: auto;
-	object-fit: contain;
 }
+.slideshow li:nth-child(3) span {
+    background-image: url('../Thessiah/workspace/media/images/photo/electric-guitar-red.jpg');
+    -webkit-animation-delay: 10s;
 
-#logo-top h3 {
-	font-size: 1.3em;
-	font-family: georgia;
-	color: #fff;
-	text-align: center;
-	margin-top: 10;
+}
+.slideshow li:nth-child(4) span {
+    background-image: url(../Thessiah/workspace/media/images/photo/mix-board-1.jpg);
+    -webkit-animation-delay: 18s;
+
+}
+.slideshow li:nth-child(5) span {
+    background-image: url(../Thessiah/workspace/media/images/photo/mix-board-2.jpg);
+    -webkit-animation-delay: 24s;
+
+}
+.slideshow li:nth-child(6) span {
+    background-image: url(../Thessiah/workspace/media/images/photo/mix-board-3.jpg);
+    -webkit-animation-delay: 32s;
+
+}
+.slideshow li:nth-child(2) div {
+    -webkit-animation-delay: 10s;
+
+}
+.slideshow li:nth-child(3) div {
+    -webkit-animation-delay: 16s;
+
+}
+.slideshow li:nth-child(4) div {
+    -webkit-animation-delay: 22s;
+
+}
+.slideshow li:nth-child(5) div {
+    -webkit-animation-delay: 28s;
+
+}
+.slideshow li:nth-child(6) div {
+    -webkit-animation-delay: 36s;
+
+}
+/* Animation for the slideshow images */
+@-webkit-keyframes imageAnimation { 
+
+	8% {
+	    opacity: 1;
+	    -webkit-transform: scale(1.05);
+	}
+	17% {
+	    opacity: 1;
+	    -webkit-transform: scale(1.1);
+	}
+	25% {
+	    opacity: 0;
+	    -webkit-transform: scale(1.1);
+	}
+}
+/* Show at least something when animations not supported */
+.no-cssanimations .slideshow li span{
+	opacity: 1;
 }
