--- a/home-boxes.css
+++ b/home-boxes.css
@@ -4,6 +4,7 @@
   height: 600px;
   background-color:transparent;
   padding-top: 50px;
+    z-index: 6000;
 }
 
 .container {
@@ -12,6 +13,8 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+        z-index: 6000;
+
 }
 
 /* BLANK SECTIONS */
@@ -22,6 +25,8 @@
   background-color: #ff731c;
   margin-top: 5%;
   margin-bottom: 5%;
+        z-index: 6000;
+
 }
 
 .blank-section h1 {
@@ -30,6 +35,8 @@ text-align: center;
 color: #000;
 font-family: sans-serif;
 padding-top: 40px;
+    z-index: 6000;
+
 }
 
 /* blank sub section */
@@ -40,6 +47,8 @@ padding-top: 40px;
   background-color: rgba(7,31,35,0.9);
   margin-top: 2%;
   margin-bottom: 5%;
+    z-index: 6000;
+
 }
 
 .blank-sub-section h3 {
@@ -47,7 +56,9 @@ padding-top: 40px;
   text-align: center;
   color: #fff;
   font-family: sans-serif;
-  padding-top: 32px;
+
+        z-index: 6000;
+padding-top: 32px;
 }
 
 .top-tracks {
@@ -55,6 +66,7 @@ padding-top: 40px;
   height: 80px;
   background-color: #ff731c;
   text-align: center;
+    z-index: 6000;
   font-family: georgia;
   font-size: 1.5em;
   font-weight: bold;
@@ -64,6 +76,7 @@ padding-top: 40px;
 
 .top-tracks i {
   font-size: 2em;
+    z-index: 6000;
   color: red;
 }
 
@@ -71,6 +84,7 @@ padding-top: 40px;
 
 .lease-info {
   width: 550px;
+    z-index: 6000;
   height: 550px;
   box-shadow: 10px 10px 60px 10px rgba(0,0,0,0.3);
   margin: 0 auto;
@@ -79,6 +93,7 @@ padding-top: 40px;
 }
 
 .basic-box {
+    z-index: 6000;
   width: 280px;
   height: 305px;
   background-color: #337ab7;
@@ -90,6 +105,7 @@ padding-top: 40px;
 
 .basic-box p {
   margin: 0 auto;
+    z-index: 6000;
   margin-top: 125px;
   color: #fff;
   text-align: center;
@@ -102,6 +118,7 @@ padding-top: 40px;
   font-family: fantasy;
   letter-spacing: 2px;
   transition: .5s ease;
+    z-index: 6000;
   margin-top: 35%;
 }
 
@@ -112,6 +129,7 @@ padding-top: 40px;
   left: 0;
   top: 301.5px;
   position: absolute;
+    z-index: 6000;
   line-height: 250px;
 }
 
@@ -119,6 +137,7 @@ padding-top: 40px;
   margin-left: 0 auto;
   color: #fff;
   text-align: center;
+    z-index: 6000;
   font-family: sans-serif;
 }
 
@@ -128,6 +147,7 @@ padding-top: 40px;
   font-family: fantasy;
   letter-spacing: 2px;
   transition: .5s ease;
+    z-index: 6000;
   margin-top: 0;
 }
 
@@ -138,6 +158,7 @@ padding-top: 40px;
   left: 280px;
   top: 250px;
   position: absolute;
+    z-index: 6000;
   line-height: 150px;
 }
 
@@ -146,6 +167,7 @@ padding-top: 40px;
   margin-top: 80px;
   color: #fff;
   text-align: center;
+    z-index: 6000;
   font-family: sans-serif;
 }
 
@@ -154,6 +176,7 @@ padding-top: 40px;
   font-weight: lighter;
   font-family: fantasy;
   letter-spacing: 2px;
+    z-index: 6000;
   transition: .5s ease;
   margin-top: 25%;
 }
@@ -164,6 +187,7 @@ padding-top: 40px;
   background-color: #ce392b;
   left: 280px;
   top: 0px;
+    z-index: 6000;
   position: absolute;
   line-height: 250px;
 }
@@ -173,6 +197,7 @@ padding-top: 40px;
   margin-top: 10px;
   color: #fff;
   text-align: center;
+    z-index: 6000;
   font-family: sans-serif;
 }
 
@@ -183,6 +208,7 @@ padding-top: 40px;
   letter-spacing: 2px;
   transition: .5s ease;
   margin-top: -1%;
+    z-index: 6000;
 }
 /* block properties */
 
@@ -193,6 +219,7 @@ padding-top: 40px;
   transform: scale(1.1);
   z-index: 100;
   box-shadow: 3px 3px 60px 3px rgba(0,0,0,0.3);
+    z-index: 6000;
   transition: 1.2s ease;
 }
 
@@ -202,6 +229,7 @@ padding-top: 40px;
   height: 90%;
   width: 100%;
   background-color: rgba(255,255,255,0.1);
+    z-index: 6000;
 }
 
 /* each column */
@@ -211,6 +239,7 @@ padding-top: 40px;
   height: 400px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -219,6 +248,7 @@ padding-top: 40px;
   height: 400px;
   background-color: #ff731c;
   border-width: thin;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -227,6 +257,7 @@ padding-top: 40px;
   height: 400px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -235,6 +266,7 @@ padding-top: 40px;
   height: 400px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -243,6 +275,7 @@ padding-top: 40px;
 
 .mix-master-content {
   height: 90%;
+    z-index: 6000;
   width: 100%;
   background-color: rgba(255,255,255,0.1);
 }
@@ -254,6 +287,7 @@ padding-top: 40px;
   height: 100%;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -262,6 +296,7 @@ padding-top: 40px;
   height: 100%;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -270,6 +305,7 @@ padding-top: 40px;
   height: 100%;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -279,6 +315,7 @@ padding-top: 40px;
   background-color: #ff731c;
   float: left;
   margin-left: 15px;
+    z-index: 6000;
   margin-right: 15px;
 }
 
@@ -287,6 +324,7 @@ padding-top: 40px;
 
 .mix-content {
   height: 90%;
+    z-index: 6000;
   width: 100%;
   background-color: rgba(255,255,255,0.1);
 }
@@ -298,6 +336,7 @@ padding-top: 40px;
   height: 450px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -306,6 +345,7 @@ padding-top: 40px;
   height: 450px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -314,6 +354,7 @@ padding-top: 40px;
   height: 450px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -324,6 +365,7 @@ padding-top: 40px;
   float: left;
   margin-left: 15px;
   margin-right: 15px;
+    z-index: 6000;
 }
 
 /* MASTERING ONLY SECTION BOX */
@@ -332,12 +374,14 @@ padding-top: 40px;
   height: 90%;
   width: 100%;
   background-color: rgba(255,255,255,0.1);
+    z-index: 6000;
 }
 
 /* each column */
 
 .lt-mas {
   width: 250px;
+    z-index: 6000;
   height: 450px;
   background-color: #ff731c;
   float: left;
@@ -349,6 +393,7 @@ padding-top: 40px;
   height: 450px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -357,6 +402,7 @@ padding-top: 40px;
   height: 450px;
   background-color: #ff731c;
   border-width: thin;
+    z-index: 6000;
   margin-left: 15px;
 }
 
@@ -365,6 +411,7 @@ padding-top: 40px;
   height: 450px;
   background-color: #ff731c;
   float: left;
+    z-index: 6000;
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -376,6 +423,7 @@ padding-top: 40px;
   position: relative;
   height: 90%;
   width: 100%;
+    z-index: 6000;
   background-color: rgba(255,255,255,0.1);
 }
 
@@ -385,6 +433,7 @@ padding-top: 40px;
   background-color: #ff731c;
   float: left;
   margin-left: 15px;
+    z-index: 6000;
 }
 
 .mix-tape {
@@ -393,6 +442,7 @@ padding-top: 40px;
   background-color: #ff731c;
   float: left;
   margin-left: 15px;
+    z-index: 6000;
 }
 
 .album {
@@ -402,6 +452,7 @@ padding-top: 40px;
   float: left;
   margin-left: 15px;
   margin-right: 15px;
+    z-index: 6000;
 }
 
 /* ARTWORK AND DESIGNS SECTION BOX */
@@ -412,6 +463,7 @@ padding-top: 40px;
   width: 100%;
   top:10%;
   background-color: rgba(255,255,255,0.1);
+    z-index: 6000;
 }
 
 /* each column */
@@ -422,6 +474,7 @@ padding-top: 40px;
   background-color: #ff731c;
   float: left;
   margin-left: 15px;
+    z-index: 6000;
 }
 
 .video-art {
@@ -430,6 +483,7 @@ padding-top: 40px;
   background-color: #ff731c;
   float: left;
   margin-left: 15px;
+    z-index: 6000;
 }
 
 .logo-design {
@@ -438,6 +492,7 @@ padding-top: 40px;
   background-color: #ff731c;
   float: left;
   margin-left: 15px;
+    z-index: 6000;
 }
 
 .lyric-video {
@@ -447,6 +502,7 @@ padding-top: 40px;
   float: left;
   margin-left: 15px;
   margin-right: 15px;
+    z-index: 6000;
 }
 
 /* box content */
@@ -454,11 +510,13 @@ padding-top: 40px;
 .container h2 {
   text-align: center;
   font-family: sans-serif;
+    z-index: 6000;
 }
 
 .container p {
   text-align: center;
   font-family: sans-serif;
+    z-index: 6000;
 }
 
 /* OUR TEAM SECTION BOX */
@@ -468,6 +526,7 @@ padding-top: 40px;
   height: 80%;
   background-color:transparent;
   margin-bottom: 25px;
+    z-index: 6000;
 }
 
 .employee-info {
@@ -475,6 +534,7 @@ padding-top: 40px;
   width: 80%;
   margin: auto;
   background-color: transparent;
+    z-index: 6000;
 }
 
 .employee-box {
@@ -482,6 +542,7 @@ padding-top: 40px;
   width: 60%;
   margin: auto;
   background-color: rgba(255, 255, 255, 0.1);
+    z-index: 6000;
 }
 
 .bio {
@@ -492,6 +553,7 @@ padding-top: 40px;
   border-width: thin;
   text-align: center;
   padding: 10px;
+    z-index: 6000;
 }
 
 .bio h3{
@@ -499,10 +561,12 @@ padding-top: 40px;
   font-size: 1.8em;
   font-style: italic;
   margin-top: 0;
+    z-index: 6000;
 }
 
 .bio p {
   font-size: 16px;
+    z-index: 6000;
 }
 
 .bio-head h2{
@@ -511,7 +575,7 @@ padding-top: 40px;
   font-family: georgia;
   font-size: 2.5em;
   margin: -20px auto;
-  z-index: 1;
+    z-index: 6000;
 }
 
 .banner {
@@ -526,7 +590,8 @@ padding-top: 40px;
 .bio-head img{
   display: block;
   margin-left: auto;
-  margin-right: auto;
+      z-index: 6000;
+margin-right: auto;
 }
 
 /* FOOTER SECTION */
@@ -537,6 +602,7 @@ padding-top: 40px;
   background-color: lightpink;
   position: relative;
   top: 0;
+    z-index: 6000;
 }
 
 .col-h3 {
@@ -549,27 +615,33 @@ padding-top: 40px;
   padding-bottom: 5px;
   width: 100%;
   margin-bottom: 10px;
+    z-index: 6000;
 }
 
 .thess-support{
-  background-color: rgba(7,31,35,.1);
+      z-index: 6000;
+background-color: rgba(7,31,35,.1);
 }
 
 .thess-comp {
   background-color: rgba(7,31,35,.4);
+    z-index: 6000;
 }
 
 .thess-follow {
   background-color: rgba(7,31,35,.3);
+    z-index: 6000;
 }
 
 .thess-contact {
   background-color: rgba(7,31,35,.1);
+    z-index: 6000;
 }
 
 .col-support, .col-company {
   text-align: center;
   color: white;
+    z-index: 6000;
 }
 
 /* support column - LEFT */
@@ -578,6 +650,7 @@ padding-top: 40px;
   height: 100%;
   background-color: #135058;
   float: left;
+    z-index: 6000;
 }
 
 .col-support a:hover{
@@ -585,46 +658,54 @@ padding-top: 40px;
   color: #0ff;
   font-family: fantasy;
   transition: 1s ease;
+    z-index: 6000;
 }
 
 .col-support a:active {
   color: white;
   font-size: .9em;
+    z-index: 6000;
 }
 
 .pay-with {
 font-family: sans-serif;
 font-size: .8em;
+    z-index: 6000;
 }
 
 .paypal:hover{
   transform:scale(1.5);
   transition: .3s ease;
   color: gold;
+    z-index: 6000;
 }
 
 .mastercard:hover{
   transform:scale(1.5);
   transition: .3s ease;
   color: gold;
+    z-index: 6000;
 }
 
 .visa:hover{
   transform:scale(1.5);
   transition: .3s ease;
   color: gold;
+    z-index: 6000;
 }
 
 .stripe:hover{
   transform:scale(1.5);
   transition: .3s ease;
   color: gold;
+    z-index: 6000;
 }
 
 .credit-card:hover{
   transform:scale(1.5);
   transition: .3s ease;
   color: gold;
+    z-index: 6000;
 }
 
 /* company column - MIDDLE */
@@ -633,10 +714,12 @@ font-size: .8em;
   height: 100%;
   background-color: rgba(7,31,35,0.9);
   float: left;
+    z-index: 6000;
 }
 
 .company-attributes {
   margin-bottom: 10px;
+    z-index: 6000;
 }
 
 .company-attributes a{
@@ -644,6 +727,7 @@ font-size: .8em;
   text-decoration: none;
   font-family: sans-serif;
   font-size: 10px;
+    z-index: 6000;
 }
 
 .company-attributes a:hover{
@@ -651,11 +735,13 @@ font-size: .8em;
   color: #0ff;
   font-family: fantasy;
   transition: 1s ease;
+    z-index: 6000;
 }
 
 .company-attributes a:active {
   color: white;
   font-size: .9em;
+    z-index: 6000;
 }
 
 
@@ -665,6 +751,7 @@ font-size: .8em;
   color: #fff;
   text-align: center;
   padding: 3px 3px 3px 3px;
+    z-index: 6000;
 }
 
 /* social media icons collectively : social-space */
@@ -674,6 +761,7 @@ font-size: .8em;
   width: 16px;
   height: 16px;
   border-radius: 100%;
+    z-index: 6000;
 }
 
 .facebook:hover {
@@ -681,6 +769,7 @@ font-size: .8em;
   background-color: #fff;;
   color: rgba(7,31,35,0.9);
   transition: .8s ease;
+    z-index: 6000;
 }
 
 .instagram {
@@ -688,6 +777,7 @@ font-size: .8em;
   width: 16px;
   height: 16px;
   border-radius: 100%;
+    z-index: 6000;
 }
 
 .instagram:hover {
@@ -695,6 +785,7 @@ font-size: .8em;
   background-color: #fff;
   color: rgba(7,31,35,0.9);
   transition: .8s ease;
+    z-index: 6000;
 }
 
 .twitter {
@@ -702,6 +793,7 @@ font-size: .8em;
   width: 16px;
   height: 16px;
   border-radius: 100%;
+    z-index: 6000;
 }
 
 .twitter:hover {
@@ -709,17 +801,20 @@ font-size: .8em;
   background-color: #fff;
   color: rgba(7,31,35,0.9);
   transition: .8s ease;
+    z-index: 6000;
 }
 
 .youtube {
   background-color: red;
   width: 16px;
+    z-index: 6000;
   height: 16px;
   border-radius: 100%;
 }
 
 .youtube:hover {
   transform: scale(1.6);
+    z-index: 6000;
   background-color: #fff;
   color: rgba(7,31,35,0.9);
   transition: .8s ease;
@@ -727,6 +822,7 @@ font-size: .8em;
 
 .linkedin {
   background-color: rgb(0,0,100);
+    z-index: 6000;
   width: 16px;
   height: 16px;
   border-radius: 100%;
@@ -734,6 +830,7 @@ font-size: .8em;
 
 .linkedin:hover {
   transform: scale(1.6);
+    z-index: 6000;
   background-color: #fff;
   color: rgba(7,31,35,0.9);
   transition: .8s ease;
@@ -742,6 +839,7 @@ font-size: .8em;
 .whatsapp {
   background-color: green;
   width: 16px;
+    z-index: 6000;
   height: 16px;
   border-radius: 100%;
 }
@@ -749,6 +847,7 @@ font-size: .8em;
 .whatsapp:hover {
   transform: scale(1.6);
   background-color: #fff;
+    z-index: 6000;
   color: rgba(7,31,35,0.9);
   transition: .8s ease;
 }
@@ -756,6 +855,7 @@ font-size: .8em;
 .col-support a {
   color: #fff;
   text-decoration: none;
+    z-index: 6000;
   font-family: sans-serif;
   font-size: 10px;
 }
@@ -766,6 +866,7 @@ font-size: .8em;
   width: 33.33%;
   height: 100%;
   background-color: #135058;
+    z-index: 6000;
   float: left;
 }
 
@@ -774,6 +875,7 @@ font-size: .8em;
   text-decoration: none;
   font-family: sans-serif;
   font-size: 12px;
+    z-index: 6000;
   margin: 0 auto;
   background-color: #135058;
   width: 80%;
@@ -784,6 +886,7 @@ font-size: .8em;
 .mon-fri {
   color: #0ff;
   text-decoration: none;
+    z-index: 6000;
   font-family: "manhattan";
   font-size: 1.5em;
   text-align: center;
@@ -795,24 +898,28 @@ font-size: .8em;
 .mon-fri:hover {
   color: gold;
   transition: .3s ease;
+    z-index: 6000;
 }
 
 .contact-us-info a {
   color: #fff;
   text-decoration: none;
   font-size: .8em;
+    z-index: 6000;
 }
 
 .contact-us-info a:hover {
   font-size: .9em;
   color: #0ff;
   font-weight: bold;
+    z-index: 6000;
   transition: .5s ease;
 }
 
 .contact-us-info a:active {
   font-size: .6em;
   color: #fff;
+    z-index: 6000;
   font-weight: bold;
   transition: 1s ease;
 }
@@ -822,6 +929,7 @@ font-size: .8em;
 .col-bottom {
   height: 100%;
   width: 100%;
+    z-index: 6000;
   background-color: rgba(7,31,35,0.9);
   display: block;
 }
@@ -829,6 +937,7 @@ font-size: .8em;
 .bottom-nfo {
   font-size: .5em;
   text-align: center;
+    z-index: 6000;
   font-family: sans-serif;
   color: #fff;
   margin-top: 0px;
@@ -839,12 +948,15 @@ font-size: .8em;
 .bottom-nfo a {
   color: #0ff;
   text-decoration: underline;
+    z-index: 6000;
 }
 
 .bottom-nfo a:hover {
   font-size: 1.2em;
   color: #fff;
+    z-index: 6000;
   font-weight: bold;
   text-decoration: none;
   transition: .5s ease;
+    cursor: pointer;
 }
